--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -4,6 +4,9 @@
 <div class="container">
   <h1>User: {{ user.username }}</h1>
   <hr>
+  <p>
+    Lives at: {{user.address.number}} {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
+  </p>
   <div class="row d-flex justify-content-center">
     {% for post in posts %}
     <div class="profile_post">
