Updated "our vision"

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -7,7 +7,16 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 50%;
+}
+@media (max-width: 576px) {
+    .aboutimg {
+        max-width: 75%;
+    }
+}
+@media (min-width: 576px) {
+    .aboutimg {
+        max-width: 50%;
+    }
 }
 .section {
     padding-top:25px;
@@ -17,17 +26,33 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 30%;
     word-wrap: break-word;
 }
-
+@media (max-width: 576px) {
+    .text {
+        max-width: 75%;
+    }
+}
+@media (min-width: 576px) {
+    .text {
+        max-width: 30%;
+    }
+}
 </style>
 {% endblock %}
 {% block content %}
 <div class="row section">
     <div class="text col-md-6">
         <h2>Our Vision</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget nisl vitae metus molestie fermentum non vel est. Integer massa ligula, euismod quis mauris sed, mollis sodales libero. Vestibulum maximus a est in faucibus. Sed purus lectus, consectetur ut lobortis quis, consectetur ac metus. Integer placerat feugiat enim ut pretium. Donec posuere lacus sed arcu scelerisque, et placerat sem auctor. Cras et ex sem.</p>
+        <p>We aim to create a community-driven platform where individuals are able to</p>
+        <ul>
+            <li>connect with others,</li>
+            <li>give freely, and</li>
+            <li>freely receieve,</li>
+            <li>share resources, and</li>
+            <li>foster a culture of generosity, sustainability, and interconnectedness.</li>
+        </ul>
+        <p>We envision a world where every item has value and every act of giving strengthens bonds within neighbourhoods, reduces waste, promotes environmental stewardship, and cultivates a sense of belonging.</p>
     </div>
     <div class="col-md-6">
         <img class="aboutimg" src="/static/assets/aboutgraphic.png"/>
@@ -40,7 +65,7 @@
     </div>
     <div class="text col-md-6 order-first order-md-1">
         <h2>Our Story</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget nisl vitae metus molestie fermentum non vel est. Integer massa ligula, euismod quis mauris sed, mollis sodales libero. Vestibulum maximus a est in faucibus. Sed purus lectus, consectetur ut lobortis quis, consectetur ac metus. Integer placerat feugiat enim ut pretium. Donec posuere lacus sed arcu scelerisque, et placerat sem auctor. Cras et ex sem.</p>
+        <p>Lorem ipsum blah blah blah</p>
     </div>
 </div>
 
