Routes now displays active page for contact and about

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -46,11 +46,11 @@
         <h2>Our Vision</h2>
         <p>We aim to create a community-driven platform where individuals are able to</p>
         <ul>
-            <li>connect with others,</li>
-            <li>give freely, and</li>
-            <li>freely receieve,</li>
-            <li>share resources, and</li>
-            <li>foster a culture of generosity, sustainability, and interconnectedness.</li>
+            <li>Connect with others</li>
+            <li>Give freely, and</li>
+            <li>Freely receieve,</li>
+            <li>Share resources, and</li>
+            <li>Foster a culture of generosity, sustainability, and interconnectedness.</li>
         </ul>
         <p>We envision a world where every item has value and every act of giving strengthens bonds within neighbourhoods, reduces waste, promotes environmental stewardship, and cultivates a sense of belonging.</p>
     </div>
