--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -72,7 +72,9 @@
 <div class="row section">
     <div class="text col-md-6">
         <h2>What we offer</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eget nisl vitae metus molestie fermentum non vel est. Integer massa ligula, euismod quis mauris sed, mollis sodales libero. Vestibulum maximus a est in faucibus. Sed purus lectus, consectetur ut lobortis quis, consectetur ac metus. Integer placerat feugiat enim ut pretium. Donec posuere lacus sed arcu scelerisque, et placerat sem auctor. Cras et ex sem.</p>
+        <p>At <a style="color: rgb(33,150,243); font-weight: bold;">NewHome</a>, we offer a user-friendly platform where users can give and receive freely, and foster community relations. Members can easily connect with others to find and offer items ranging from household goods to electronics to clothing. Anything given a new home is a reduction of our joint carbon footprint.</p>
+        <p>Our website provides a place for acts of kindness, where members can declutter their homes, but also help others in finding items of use to them. We empower communities to embrace a conscious effort to reduce waste and promote sustainability.</p>
+        <p>Whether you're in search of a specific item, or looking to give back, <a style="color: rgb(33,150,243); font-weight: bold;">NewHome</a> creates a welcoming and inclusive environment for all. Come join us in creating a better world.</p>
     </div>
     <div class="col-md-6">
         <img class="aboutimg" src="/static/assets/aboutgraphic.png"/>
