Updated "our story" in about

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -65,7 +65,10 @@
     </div>
     <div class="text col-md-6 order-first order-md-1">
         <h2>Our Story</h2>
-        <p>Lorem ipsum blah blah blah</p>
+        <p>At <a style="color: rgb(33,150,243); font-weight: bold;">NewHome</a>, our story began with a simple idea: to build a platform to enable users worldwide an easy way to rehome unwanted items.</p>
+        <p>Here, we define how consumption, ownership, and community are viewed. Fueled by a desire to challenge excessive consumerism and promote sustainable ways of living, we embarked on a journey to create a space where individuals could freely give and receive and create a sense of community.</p>
+        <p>We were inspired by the generosity of others, and we wanted to pass on the favour and encourage others to do the same. We want to see a world where everyone shares their resources like others have given us before. Our story is shaped by the collaborative efforts of our community towards a goal of compassion.</p>
+        <p>As we continue our journey, our commitment remains the same: to help others help others.</p>
     </div>
 </div>
 
