--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,9 +4,11 @@
 {{ super() }}
 <style>
 .aboutimg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 @media (max-width: 576px) {
     .aboutimg {
