--- a/app/static/index.css
+++ b/app/static/index.css
@@ -111,3 +111,14 @@ body {
 .footer .nav-item *:hover {
     text-decoration: underline;
 }
+
+.contactformmain {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 50%;
+}
+.contactrow {
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
+}
