--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -2,38 +2,16 @@
 {% block title %}About{% endblock %}
 {% block head %}
 {{ super() }}
-<style>
-.contact {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 50%;
-}
-.row {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
-}
-</style>
-<script>
-function validateEmail() {
-    let email_input = document.forms["contactform"]["email"].value;
-    if (/([^\.\s]+\.)*[^\.\s]+@[^\.\s][^\.\s]*(\.[^\.\s]*)*/.test(email_input))
-    {
-        return (true)
-    }
-    alert("You have entered an invalid email address!")
-    return (false)
-}
-</script>
+<script src="contactform.js"></script>
 {% endblock %}
 {% block content %}
-<div class="contact">
+<div class="contactformmain">
     <h3>Contact us</h3>
     <form id="contactform" action="{{ url_for('contact') }}" onsubmit="return validateEmail()" method=post>
         {{ form.csrf_token }}
         <div>
             <!-- name forms -->
-            <div class="row">
+            <div class="row contactrow">
                 <div class="col-md-3">
                     {{ form.name.label }}
                 </div><br>
@@ -42,7 +20,7 @@ function validateEmail() {
                 </div>
             </div>
             <!-- email forms -->
-            <div class="row">
+            <div class="row contactrow">
                 <div class="col-md-3">
                     {{ form.email.label }}
                 </div><br>
@@ -51,7 +29,7 @@ function validateEmail() {
                 </div>
             </div>
             <!-- Subject of your request -->
-            <div class="row">
+            <div class="row contactrow">
                 <div class="col-md-3">
                     {{ form.subject.label }}
                 </div><br>
@@ -60,13 +38,13 @@ function validateEmail() {
                 </div>
             </div>
             <!-- Content of your request -->
-            <div class="row">
+            <div class="row contactrow">
                 <div class="col-md-12">
                     {{ form.message(placeholder='Write your request ...', class_="form-control") }}
                 </div>
             </div>
             <!-- Submit button -->
-            <div class="row" style="padding-top:1rem; padding-right:20px; float:right;">
+            <div class="row contactrow" style="padding-top:1rem; padding-right:20px; float:right;">
                 {{ form.submit }}
             </div>
         </div>
