removed style tags from contact

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <!-- Submit button -->
-            <div class="row contactrow" style="padding-top:1rem; padding-right:20px; float:right;">
+            <div class="row contactsubmit"">
                 {{ form.submit }}
             </div>
         </div>
