--- a/app/static/index.css
+++ b/app/static/index.css
@@ -122,3 +122,8 @@ body {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
 }
+.contactsubmit {
+    padding-top:1rem; 
+    padding-right:20px; 
+    float:right;
+}
