removed style from about
NewHome being bold and blue now is in index.css

--- a/app/static/index.css
+++ b/app/static/index.css
@@ -166,3 +166,8 @@ body {
         transform: translate(-50%, -50%);
     }
 }
+
+.newhometext {
+    color: rgb(33,150,243); 
+    font-weight: bold;
+}
