--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -25,7 +25,7 @@
     </div>
     <div class="abouttext col-md-6 order-first order-md-1">
         <h2>Our Story</h2>
-        <p>At <a style="color: rgb(33,150,243); font-weight: bold;">NewHome</a>, our story began with a simple idea: to build a platform to enable users worldwide an easy way to rehome unwanted items.</p>
+        <p>At <a class="newhometext">NewHome</a>, our story began with a simple idea: to build a platform to enable users worldwide an easy way to rehome unwanted items.</p>
         <p>Here, we define how consumption, ownership, and community are viewed. Fueled by a desire to challenge excessive consumerism and promote sustainable ways of living, we embarked on a journey to create a space where individuals could freely give and receive and create a sense of community.</p>
         <p>We were inspired by the generosity of others, and we wanted to pass on the favour and encourage others to do the same. We want to see a world where everyone shares their resources like others have given us before. Our story is shaped by the collaborative efforts of our community towards a goal of compassion.</p>
         <p>As we continue our journey, our commitment remains the same: to help others help others.</p>
@@ -35,9 +35,9 @@
 <div class="row aboutsection">
     <div class="abouttext col-md-6">
         <h2>What we offer</h2>
-        <p>At <a style="color: rgb(33,150,243); font-weight: bold;">NewHome</a>, we offer a user-friendly platform where users can give and receive freely, and foster community relations. Members can easily connect with others to find and offer items ranging from household goods to electronics to clothing. Anything given a new home is a reduction of our joint carbon footprint.</p>
+        <p>At <a class="newhometext">NewHome</a>, we offer a user-friendly platform where users can give and receive freely, and foster community relations. Members can easily connect with others to find and offer items ranging from household goods to electronics to clothing. Anything given a new home is a reduction of our joint carbon footprint.</p>
         <p>Our website provides a place for acts of kindness, where members can declutter their homes, but also help others in finding items of use to them. We empower communities to embrace a conscious effort to reduce waste and promote sustainability.</p>
-        <p>Whether you're in search of a specific item, or looking to give back, <a style="color: rgb(33,150,243); font-weight: bold;">NewHome</a> creates a welcoming and inclusive environment for all. Come join us in creating a better world.</p>
+        <p>Whether you're in search of a specific item, or looking to give back, <a class="newhometext">NewHome</a> creates a welcoming and inclusive environment for all. Come join us in creating a better world.</p>
     </div>
     <div class="col-md-6">
         <img class="aboutimg float-end" src="/static/assets/aboutgraphic3.png"/>
