--- a/app/templates/advancedsearch.html
+++ b/app/templates/advancedsearch.html
@@ -1,38 +1,32 @@
-<!-- An advanced search page which will redirect you to search.html once form is submitted -->
 {% extends "base.html" %}
 {% block title %}Advanced Search{% endblock %}
 {% block content %}
 <!-- The following form was derived from https://getbootstrap.com/docs/4.0/components/forms/? -->
 <div class="container">
-    <form action="./search.html" accept-charset="UTF-8" method="get">
+    <h1>Advanced Search</h1>
+    <form action="{{ url_for('search') }}" accept-charset="UTF-8" method="get">
         <div class="form-group row">
             <label for="nameSearch" class="col-sm-3 col-form-label">What are you looking for?</label>
             <div class="col-sm-9">
-                <input type="text" class="form-control" id="nameSearch" placeholder="Search for anything" name="q" maxlength="1024">
+                {{ form.q(class="form-control", id="nameSearch", maxlength="1024") }}
             </div>
         </div>
         <div class="form-group row">
             <label for="maxDistance" class="col-sm-3 col-form-label">Max distance</label>
             <div class="col-sm-8">
-                <input name="md" type="range" id="maxDistance" class="form-control" value="5" min="1" max="25" oninput="this.parentElement.nextElementSibling.childNodes[0].value = this.value + 'km'">
+                {{ form.md(class="form-control", id="md", type="range", value="5", min="1", max="25", oninput="this.parentElement.nextElementSibling.childNodes[0].value = this.value + 'km'") }}
             </div>
             <div class="col-sm-1" id="maxDistanceDisplay"><output>5km</output></div>
         </div>
         <div class="form-group row">
-            <label for="sortOrder" class="col-sm-3 col-form-label">Sort by</label>
+            <label for="order" class="col-sm-3 col-form-label">Sort by</label>
             <div class="col-sm-9">
-                <select name="order" id="sortOrder" class="form-control">
-                    <option selected>Choose...</option>
-                    <option>Newest</option>
-                    <option>Oldest</option>
-                    <option>Closest</option>
-                    <option>Vendor rating</option>
-                </select>
+                {{ form.order(class="form-control", id="order") }}
             </div>
         </div>
         <div class="col-auto">
             <button type="submit" class="btn btn-primary mb-2">Search</button>
-        </div>
+        </div>  
     </form>
 </div>
 {% endblock %}
