Time Ago Calc moved to controllers.py

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -50,6 +50,8 @@
         <p class="name">{{item.name}}</p>
         <p>Located in {{item.suburb}}</p>
         <p class="d-none d-xl-block">Posted by {{item.who}}</p>
+        <p>Posted {{ item.timestamp }}</p>
+        
     </div>
     {% endfor %}
 </div>
