--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,14 +5,14 @@
 <script src="items.js"></script>
 <style>
 .anItem {
-    border: 2px solid grey;
+    outline: 2px solid grey;
     border-radius: 10px;
     padding: 10px;
     margin: 10px;
 }
 .anItem:hover {
     background-color: lightgrey;
-    border: 3px solid darkslategrey;
+    outline: 3px solid darkslategrey;
     cursor: pointer;
 }
 .anItem > img {
