Tested some different colours

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -32,7 +32,7 @@
     </script>
     {% endblock %}
 </head> 
-<body>
+<body style="background-color:#F2DED4">
     <!-- Header derived from w3schools -->
     <div class="topnav" id="topnav">
         <a class="d-none d-md-block {% if active_link == '/' %}active{% endif %} home" href="{{ url_for('index') }}"><img src="NewHomeLogo.png" style="height:50px;" alt="New Home Logo"></a>
