--- a/app/static/index.css
+++ b/app/static/index.css
@@ -3,7 +3,7 @@ This CSS file contains the style information for the navbar and footer.
 */
 
 .topnav {
-    background-color: #e9e9e9;
+    background-color: #c9c9c9;
     display: flex;
     align-items: center;
     position: fixed;
@@ -24,7 +24,7 @@ This CSS file contains the style information for the navbar and footer.
 }
 
 .topnav a:hover {
-    background-color: #ddd;
+    background-color: #aaa;
     color: black;
 }
 
@@ -57,14 +57,14 @@ This CSS file contains the style information for the navbar and footer.
     padding: 6px 10px;
     margin-top: 8px;
     margin-right: 16px;
-    background: #ddd;
+    background: #eee;
     font-size: 17px;
     border: none;
     cursor: pointer;
 }
 
 .topnav .search-container button:hover {
-    background: #ccc;
+    background: #999;
 }
 
 @media screen and (max-width: 600px) {
@@ -183,6 +183,7 @@ body {
 }
 
 .anItem {
+    background-color: white;
     outline: 2px solid grey;
     border-radius: 10px;
     padding: 10px;
