Checking that API is called when home page loaded

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block content %}
+<script src="index.js"></script>
     <!-- Add onclick method that redirects user to the item's page -->
     <!-- This may be used on the search results page, so may add to a js file later -->
     <script>
