--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
 <body style="background-color:#DEEEFC ">
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/"><img class="img-fluid" src="NewHomeLogo.png" style="max-height:60px;" alt="New Home Logo"/></a>
+            <a class="navbar-brand" href="/"><img class="img-fluid" src="/static/NewHomeLogo.png" style="max-height:60px;" alt="New Home Logo"/></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
