--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,6 +5,11 @@
   <h1>User: {{ user.username }}</h1>
   <hr>
   <p>
+    Made {{user.points}} {% if user.points != 1 %}Posts{% else %}Post{%endif%} 
+    ({{user.given}} {% if user.given != 1 %}Offers{% else %}Offer{%endif%}, 
+    {{user.requested}} {% if user.requested != 1 %}Requests{% else %}Request{%endif%})
+  </p>
+  <p>
     Lives at: {{user.address.number}} {{user.address.street}}, {{user.address.city}}, {{user.address.state}}, {{user.address.country}}
   </p>
   <div class="row d-flex justify-content-center">
