--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -16,7 +16,9 @@
     {% for post in posts %}
     <div class="profile_post">
       <p>
-        {{ post.author.username }} posted: <b>{{ post.item_name }}</b> at {{ post.timestamp }}
+        {% if post.post_type == "OFFER" %}Offer for
+        {% elif post.post_type == "REQUEST" %} Request for
+        {% endif %} <b>{{ post.item_name }}</b> at {{ post.timestamp }}
       </p>
       {% if post.images %}
       <img class="profile_post_img" src="{{ post.images.src }}">
